@@ -14,6 +14,7 @@
 	* Fallback for BINARY
 	* Fallback for UIDPLUS
 	* Added a check for the session in TnyCamelTransportAccount
+	* Bugfix when finalizing an account
 
 2007-07-01  Philip Van Hoof  <pvanhoof@gnome.org>
 
